--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../api_yamdb
+    image: ritehist/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
