--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Flake8 and django tests
         run: |
           python -m flake8
-          python pytest
+          python -m pytest
   
   push_docker_image:
     name: Build and push Docker image to Docker Hub
