Fix critical mistake

--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          file: api_yamdb/Dockerfile
           push: True
           tags: ritehist/api_yamdb:latest
   
