--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY api_yamdb/requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY ./ .
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000"]
+CMD ["ls"]
