--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -76,7 +76,7 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose pull
             sudo docker-compose up -d
-            sudo docker compose exec web python manage.py migrate
+            sudo docker-compose exec web python manage.py migrate
             sudo docker-compose exec web python manage.py collectstatic --noinput
   
   send_message:
