--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -43,13 +43,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Go to directory with Dockerfile
-        run: cd api_yamdb/
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          file: api_yamdb/Dockerfile
           push: True
           tags: ritehist/api_yamdb:latest
   
@@ -67,7 +65,8 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose rm -f web
+            sudo rm -f .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -75,7 +74,10 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose pull
             sudo docker-compose up -d
+            sudo docker-compose exec -T web python manage.py migrate
+            sudo docker-compose exec -T web python manage.py collectstatic --noinput
   
   send_message:
     name: Send message after succesful deploy to Telegram
