--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -55,6 +55,7 @@ jobs:
     name: Deploy app on server
     runs-on: ubuntu-latest
     needs: push_docker_image
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Execute remote ssh commands to deploy
         uses: appleboy/ssh-action@master
